--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">">
     <link rel="stylesheet" href="./style.css">
     <title>webstudio</title>
 </head>
@@ -26,10 +29,10 @@
         </nav>
             <ul>
                 <li>
-                    <a href="">info@devstudio.com</a>
+                    <a href="mail:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="">+38 096 111 11 11    </a>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
     </header>  
@@ -94,16 +97,22 @@
                 <li>
                     <img src="./images/img (6).jpg" alt="Michael">
                     <p>Михайло Єрмаков</p>
-                    <p>UI Designer</p>
-font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0.03em;
-text-align: center;
-</p>
+                    <p>UI Designer</p></p>
                 </li>
             </ul>
         </section>
     </main>
+    <footer>
+        <a href="./"><span>Web</span>Studio</a>
+       <address>м. Київ, пр-т Лесі Українки, 26</address>
+       <ul>
+        <li>
+            <a href="mail:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+    </ul>
+    </footer>
 </body>
 </html>
